After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 739433 - video: recent video-resampler addition causes build failures when building without orc
video: recent video-resampler addition causes build failures when building wi...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-10-30 23:25 UTC by Pietro Gagliardi (andlabs)
Modified: 2014-11-02 22:16 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
copy of linked build log (45.70 KB, application/octet-stream)
2014-10-30 23:25 UTC, Pietro Gagliardi (andlabs)
Details

Description Pietro Gagliardi (andlabs) 2014-10-30 23:25:04 UTC
Created attachment 289706 [details]
copy of linked build log

Build log: http://paste.fedoraproject.org/146680/47113701/
configure sees that I don't have the orc development files on my (Ubuntu 14.10) system, yet make still tries to build some files with them. Most likely an oversight?
Comment 1 Tim-Philipp Müller 2014-10-30 23:56:41 UTC
Does this help?

commit ef98393b0d5e9e69b4751ac1b40c0f08b832685a
Author: Tim-Philipp Müller <tim@centricular.com>
Date:   Thu Oct 30 23:53:39 2014 +0000

    video-scaler: fix build without orc
    
    https://bugzilla.gnome.org/show_bug.cgi?id=739433
Comment 2 Tim-Philipp Müller 2014-10-31 17:05:52 UTC
It builds fine for me with --disable-orc now, so closing this. Please re-open if there are still issues, thanks!
Comment 3 Pietro Gagliardi (andlabs) 2014-11-02 22:06:37 UTC
Yes, that fix seems to have worked. Thanks. (I'm preferring to use liborc anyway in the future, but I just tested it now without and it compiles fine.)
Comment 4 Tim-Philipp Müller 2014-11-02 22:16:52 UTC
Great, thanks for confirming.