video-scaler: fix build without orc

https://bugzilla.gnome.org/show_bug.cgi?id=739433